Updated .env file (placeholder for HOSTING_URL)

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PROXY_URL="https://dizipal950-dotcom.gateway.web.tr"
 DIZIPAL_HOST="https://dizipal950.com/"
-HOSTING_URL="https://bf17379232ce-dizipal-stremio-addon.baby-beamup.club"
+HOSTING_URL=""
 PORT=7000
