--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PROXY_URL="https://dizipal950-dotcom.gateway.web.tr"
 DIZIPAL_HOST="https://dizipal950.com/"
-HOSTING_URL=""
+HOSTING_URL="https://6a11b12a49a3-dizipal-stremio-addon.baby-beamup.club"
 PORT=7000
